MDE model -> model

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -938,7 +938,7 @@ The reader is encouraged to report any technical or editing issues/problems
 This \IS specifies the Distributed Ontology, Modeling and Specification
  Language (\DOL)\index{\dolindex ! definition}.  \DOL is designed to achieve integration  
 and interoperability of
-ontologies, specifications and MDE models (OMS for short). \DOL is a language for
+ontologies, specifications and models (OMS for short). \DOL is a language for
 distributed knowledge representation, system specification and 
 model-driven development across multiple OMS, particularly OMS
  that have been formalized in different OMS languages.
@@ -956,15 +956,15 @@ machine-processable texts that carry a formal semantics. Among those fields are 
 \textbf{O}ntologies 
  formalizing domain knowledge, 2) (formal) \textbf{M}odels of systems, and 3) the formal 
 \textbf{S}pecification
-of systems. Ontologies, MDE models  and specifications will (for the purpose of this document) 
+of systems. Ontologies, models  and specifications will (for the purpose of this document) 
 henceforth be abbreviated as \textbf{OMS}\index{OMS}.
 
 An OMS provides formal descriptions, which range in scope from domain knowledge and activities
-(ontologies, MDE models) to properties and behaviors of hardware and software systems (MDE models,
+(ontologies, models) to properties and behaviors of hardware and software systems (models,
 specifications). These formal descriptions can be used for the analysis and verification of domain
 models, system models and systems themselves, using rigorous and effective reasoning tools.   As 
 systems increase in complexity, it becomes concomitantly less practical to provide a monolithic 
-logical cover for all.  Instead various MDE models are developed to represent different viewpoints or 
+logical cover for all.  Instead various models are developed to represent different viewpoints or 
 perspectives on a domain or system. 
  Hence, interoperability becomes
 a crucial issue, in particular, formal interoperability, i.e.\ interoperability that is based on
@@ -1487,7 +1487,7 @@ Reference.  W3C Recommendation, 18 August 2009\\ \url{http://www.w3.org/TR/2009/
 \sclause{Distributed Ontology, Modeling and Specification Language}
 
 \begin{definitions}
-  \termdefinitionLight{Distributed Ontology, Modeling and Specification Language \synonym\DOL} \index{\dolindex ! definition}{unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and MDE models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
+  \termdefinitionLight{Distributed Ontology, Modeling and Specification Language \synonym\DOL} \index{\dolindex ! definition}{unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
   whose syntax and semantics are specified in this \IS{}.}
 %
 
@@ -1554,7 +1554,7 @@ plus non-logical annotations\index{annotation}.}
 \termdefinition{ontology}{\termref{logical theory} that is used as a
   shard conceptualization}
     
-\termdefinition{MDE model}{logical theory that is used as an
+\termdefinition{model}{logical theory that is used as an
 abstract representation of a domain or of a system, in
   the sense of model-driven engineering (MDE)}
 \begin{note}
@@ -1566,7 +1566,7 @@ of logic (model theory). In this document, we use the term \termref{realisation}
 constraint in mathematical structures, software systems and/or hardware
 systems}
 
-\termdefinitionLight{OMS (ontology, specification or MDE model)\index{OMS}}
+\termdefinitionLight{OMS (ontology, specification or model)\index{OMS}}
 {basic OMS or structured OMS.}
 \begin{note}
 
@@ -2433,10 +2433,10 @@ See section~\ref{dist-het-onto}.
 \begin{note}
 Within ISO 19763 and ISO 20943, metamodel interoperability is
 equivalent to the existence of mapping, which are statements that the
-domains represented by two MDE models intersect and there is a need to
+domains represented by two models intersect and there is a need to
 register details of the correspondence between the structures in the
-MDE models that semantically represent this overlap. Within these
-standards, an MDE model is a representation of some aspect of a domain of
+models that semantically represent this overlap. Within these
+standards, an model is a representation of some aspect of a domain of
 interest using a normative modeling facility and modeling
 constructs.
 
@@ -3144,7 +3144,7 @@ quality and consistent, and to actually exploit the metadata when querying the d
 analysis. 
 
 The data is usually represented in a database or RDF triple store, which work with a \termref{closed world assumption} on the dataset, and are not expressive enough to 
-incorporate the metadata `background knowledge', such as the conditions for validity of the physical laws in the MDE model of the object of observation. These metadata 
+incorporate the metadata `background knowledge', such as the conditions for validity of the physical laws in the model of the object of observation. These metadata 
 require a more expressive language, such as OWL or Common Logic, which operate under an open-world semantics. However, it is unfeasible to translate the 
 whole large dataset into OWL or first-order logic. To `meet in the middle', it is possible to declare bridge rules (i.e., a mapping layer) that can link the metadata to 
 the data. This approach can be used for intelligent data analysis that combines the data and metadata through querying the system. It enables the analysis of the 
@@ -3602,7 +3602,7 @@ between \uml{atm} and \uml{bank} may occur.  Figure~\ref{fig:class}
 provides structural information in form of interfaces specifying what is
 provided and required at the \uml{userCom} port and the \uml{bankCom}
 port of the \uml{atm} instance.  An interface is a set of operations
-that other MDE model elements have to implement. In our case, the
+that other model elements have to implement. In our case, the
 interfaces are described in a \emph{class model}. Its component type 
 \uml{ATM} is further enriched with the OCL
 constraint \uml{trialsNum <= 3}, which refines its semantics requiring
@@ -3805,7 +3805,7 @@ end
 
 \sclause{Conclusion}
 
-In this section, several use cases have been introduced. They illustrate many aspects of DOL and its usefulness in many situations in which different OMS artifacts might be leveraged and augmented to produce broader or more tractable MDE models, ontologies, and specifications.
+In this section, several use cases have been introduced. They illustrate many aspects of DOL and its usefulness in many situations in which different OMS artifacts might be leveraged and augmented to produce broader or more tractable models, ontologies, and specifications.
 
  \DOL has been designed to support of a wide range of formalisms and
 provides the ability to specify the basis for formal interoperability even among heterogeneous OMS and OMS networks. \DOL enables the solutions of the problems described in the use cases above. It also enables the development of DOL documents, tools and workflows that 
@@ -5823,7 +5823,7 @@ $\sen(\sigma):{\sen(\Sigma)}\to{\sen(\Sigma')}$, where often
 $\sen(\sigma)(\varphi)$ is written as $\sigma(\varphi)$, \item a
 functor $\IMod:{\Sig^{op}}\to{\Cat}$ giving, for each signature
 $\Sigma$, the category of \emph{realisations}\footnote{To avoid confusion 
-with MDE models, we use `realisation` instead of  the commonly used term `model` in logic.} $\IMod(\Sigma)$, and for each
+with models in the sense of model-driven engineering, we use `realisation` instead of  the commonly used term `model` in logic.} $\IMod(\Sigma)$, and for each
 signature morphism $\sigma\map{\Sigma}{\Sigma'}$, the \emph{reduct
 functor\/} $\IMod(\sigma):{\IMod(\Sigma')}\to {\IMod(\Sigma)}$, where
 often $\IMod(\sigma)(M')$ is written as $M'\forget{\sigma}$, and
