note stating that realisations are models in the sense of model theory

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1649,6 +1649,11 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
   \begin{note}
   The notion of realisation depends on the \termref{OMS language} or \termref{logic}. 
   \end{note}
+  \begin{note}
+    In logical model theory, a realisation is called ``model''. However, we
+    have reserved the term ``model'' for models in the sense of
+    model-driven engineering.
+  \end{note}
 
 
 \termdefinition{expression}{a finite combination of symbols that are well-formed according to applicable rules (depending on the language)}
