corrected definition of OMS

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1562,7 +1562,7 @@ of logic (model theory).
 \termdefinition{specification}{formal representation of (requirements of) a data structure, an algorithm or a hardware or software system used in systems analysis, requirements analysis and systems design}
 
 \termdefinitionLight{OMS (ontology, specification or MDE model)\index{OMS}}
-{a basic or structured ontology, specification or MDE model.}
+{collection of expressions (like non-logical symbols, sentences and structuring elements) in a given OMS language (or several such languages) and denoting a class of models and, possibly, a logical theory.}
 \begin{note}
 
 	An OMS is either a basic OMS (which is always a native OMS, and can occur as a text fragment in a \DOL document) or a structured OMS (which can be either a native structured OMS contained in some native document, or a \DOL structured OMS contained in a \DOL document).
