Fabian's new definition of ontology

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1542,7 +1542,6 @@ plus non-logical annotations\index{annotation}.}
 %\begin{definitions}
 
 \termdefinition{DOL structured OMS}{syntactically valid \DOL expression denoting an OMS that is built from smaller OMS as building blocks.}
-
   \begin{note}
    \DOL structured OMS, typically, use basic OMS as building blocks for defining other structured OMS, OMS mappings or OMS networks.  
   \end{note}
@@ -1551,8 +1550,17 @@ plus non-logical annotations\index{annotation}.}
   \end{note}
 	
  
-\termdefinition{ontology}{explicit and shared formal representation of a conceptualisation of a domain or of fundamental notions, including a controlled vocabulary and a taxonomy}
-    
+\termdefinition{ontology}{explicit and shared formal representation of the entities and their interrelationships of a given domain of discourse or of fundamental notions}
+\begin{note}
+The explicit and shared formal representation is materialised in some OMS language (or several such languages).
+\end{note}
+\begin{note}
+Ontologies also include definitions and explanations in natural language that capture the intended meaning of the formal expressions.
+\end{note}
+\begin{note}
+Ontologies typically include a taxonomy and, frequently, a partonomy.
+\end{note}
+
 \termdefinition{MDE model}{representation of (the development of) a system (e.g. hardware, software or information system or organisation), or a domain related to a system, used in model-driven engineering (MDE)}
 \begin{note}
 Not to be confused with the term \termref{model} in the sense
