--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4548,7 +4548,11 @@ the respective conforming OMS language; \eg \DOL's OMS reference and extension c
   \syntax{ClosableOMS}). A closure forces the subsequently declared
   non-logical symbols to be interpreted in a minimal  or
   maximal way, while the non-logical symbols declared  in
-  the local environment are fixed. Variants of closure are
+  the local environment are fixed.\footnote
+  {Note that if applied to algebraic signatures (sorts and operation symbols),
+    minimization can be used to express reachability (i.e. term-generatedness)
+    of algebraic (first-order) models.}
+  Variants of closure are
   minimization, maximization, freeness (minimizing also data
   sets and equalities on these,  which enables the inductive
   definition of relations and datatypes), and cofreeness (enabling the
