explanation for model finder

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1911,7 +1911,7 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 \termref{logics} where the converse does not hold.
 \end{note}
 
-\termdefinition{model finding}{process that finds \termref{realisationss} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
+\termdefinition{model finding}{process that finds \termref{realisations} (models) of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
 
   \termdefinition{model finder}{\termref{tool} that implements \termref{model finding}.}
 
