title for diff document

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -651,7 +651,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 \bigskip
 
-\textsf{\textit{\fontsize{16}{16}\selectfont{}FTF -- Beta}}
+\textsf{\textit{\fontsize{16}{16}\selectfont{}FTF -- Beta --- convenience document showing all proposed differences}}
 %Version \version %DIFDELCMD < 
 
 
